src/test/deca/syntax/parser/invalid/inst_expr_while_empty_cond.deca
// Test de parser, le while n'a pas de condition mais des parenthèses de 
// condition

{
    while () { print(5);};
}